Update form field identifiers and sitemap.xml file

--- a/css/nordsoy.css
+++ b/css/nordsoy.css
@@ -3593,7 +3593,7 @@ figcaption {
   align-self: end;
 }
 
-#Kuinka-sait-tiet-meist.w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 {
+#kuinka-sait-tietaa-meista.w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
